--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -4,3 +4,8 @@
   background-color: rgb(255, 192, 203);
   font-family: Verdana, "DejaVu Sans", sans-serif;
 }
+
+#second-element {
+  color: rgb(0, 0, 255);
+  font-size: 36px;
+}
